--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@use-gesture/react": "^10.3.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13"
