--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,9 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
-    "google-auth-library": "^10.3.0",
+    "google-auth-library": "^10.5.0",
     "http": "^0.0.1-security",
-    "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10"
